--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^6.19.4",
     "chart.js": "^4.4.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
