--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.4",
+    "@turf/turf": "^6.5.0",
     "chart.js": "^4.4.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
